@@ -27,7 +27,7 @@ $error = "";
 // disabled.
 if ( $allow_view_other == "N" && ! $is_admin ) {
   // not allowed...
-  do_redirect ( "$STARTVIEW.php" );
+  send_to_preferred_view ();
 }
 
 if ( empty ( $id ) ) {
