@@ -29,7 +29,7 @@ $DAYS_PER_TABLE = 7;
 
 if ( $allow_view_other == "N" && ! $is_admin ) {
   // not allowed...
-  do_redirect ( "$STARTVIEW.php" );
+  send_to_preferred_view ();
 }
 if ( empty ( $id ) ) {
   do_redirect ( "views.php" );
